# gdot-ai-commit

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASING.md  SECURITY.md  g  g.  g.test  install.sh  test_install.sh
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  publish-brew.yml  publish-npm.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  hooks.rs  main.rs  setup.rs  util.rs
crates/cli/src/cli/: args.rs  commit.rs  config.rs  doctor.rs  mod.rs  tracing.rs
crates/cli/tests/: cli_integration.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  diff.rs  error.rs  git.rs  ignore.rs  lib.rs  pipeline.rs  prompt.rs  retry.rs
crates/core/src/config/: env.rs  io.rs  mod.rs  tests.rs  types.rs  values.rs
crates/core/src/pipeline/: context.rs  generation.rs  mod.rs  sanitize.rs  tests.rs
crates/core/src/providers/: mod.rs  ollama.rs  openai.rs
crates/core/src/providers/openai/: mod.rs  parse.rs  payloads.rs  retry.rs  tests.rs
docs/: ARCHITECTURE.md
homebrew/: git-ai-commit.rb  goodcommit.rb
npm/: README.md  package.json
npm/scripts/: install.js
scripts/: audit.sh  bootstrap.sh  lint.sh  publish-brew.sh  test.sh  verify-npm.sh
src/: cli.rs  config.rs  diff.rs  git.rs  hooks.rs  ignore.rs  main.rs  setup.rs  ui.rs  util.rs
src/providers/: mod.rs  ollama.rs  openai.rs
