[package]
name = "goodcommit"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Good Commit: fast, reliable AI commit messages"
repository = "https://github.com/Bikz/goodcommit"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"
globset = "0.4"
is-terminal = "0.4"
once_cell = "1.19"
rand = "0.8"
regex = "1.10"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "time"] }
toml = "0.8"

[profile.release]
lto = true
codegen-units = 1
