[package]
name = "goodcommit"
version = "0.3.1"
edition = "2021"
license = "MIT"
description = "Good Commit: fast, reliable AI commit messages"
repository = "https://github.com/Bikz/goodcommit"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"
goodcommit-core = { path = "../core" }
is-terminal = "0.4"
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "time", "signal"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.13"
